# assetLoader

./: .gitignore  README.md  app_assetloader.py  assetloader.py  assetviewer.py  dialog.ui  geometry_finder.py  log.txt  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
assetloader/: app.py  getassets.py  views.py
resources/: resources.py
src/assetloader/: app.py  getassets.py  views.py
src/assetloader/ui/: dialog.ui  window.py
src/assetloader/ui/resources/: resources.py  resources.qrc
tests/: conftest.py  test_assetloader.py
ui/: dialog.ui
